@@ -514,8 +514,7 @@ function advanced_forum_get_reply_link($node) {
       $attributes = $node->links['comment_add']['attributes'];
      
       $reply_link->class = 'reply-allowed';
-      $reply_link->link = l(t('Post Reply'), $href, array('fragment' => $fragment, 'attributes' => $attributes)); 
-    
+      $reply_link->link = l(t('Post Reply'), $href, array('fragment' => $fragment, 'attributes' => $attributes));    
       return $reply_link;
     }
      
@@ -528,14 +527,12 @@ function advanced_forum_get_reply_link($node) {
       
       $reply_link->class = 'reply-allowed';
       $reply_link->link = l(t('Post Reply'), $href, array('query' => $query, 'attributes' => $attributes)); 
-     
       return $reply_link;
     }
     else {
       // User does not have access to post replies on this node.
       $reply_link->class = 'reply-forbidden';
       $reply_link->link = theme('comment_post_forbidden', $node);
-      print "no access";
       return $reply_link;
     }
   }
