@@ -48,7 +48,6 @@ floats.
 
 /*** FORUM LINK LISTS *******************************************************/
 
-
 .forum-links-top {
   margin: 20px 0 20px 0;
 }
@@ -62,24 +61,13 @@ floats.
   margin: 20px 0 0 0;
 }
 
-/* This sets up the ability to turn them into buttons in CSS. */
-.forum-links li {
-  padding: 0 1em 0 0;
-  float: left;
-}
-
-.forum-links li.comment_delete a {
-  width: 95px;
-  height: 28px;
-  display: block;
- }
-
 ul.forum-links {
   margin: 0;
   padding: 0;
 }
 
 .forum-links li {
+  float: left; /* This is needed to turn them into buttons in CSS. */
   margin: 0;
   padding: 0pt 15px 0pt 0pt;
   list-style-image: none;
